Fixed EmotionAll for Safari

--- a/emotion-all/about.html
+++ b/emotion-all/about.html
@@ -10,7 +10,7 @@
   <body>
     <div class="mainContainerAbout">
       <div class="topLinksAbout">
-        <a href="index.html">EmotionAll</a>
+        <a href="index.html">&#x2190; Back to EmotionAll</a>
       </div>
       <div class="titleContainerAbout">
         <h1>About EmotionAll</h1>
